test/errors/stackoverflow/fib.yasl


fn fib(const n) {
    if n == 1 || n == 0{
        return n
    }
    return fib(n-1) + fib(n-2)
}




echo fib(2000)
